<resources>
    <string name="app_name">迈拓仪表</string>
    <string name="app_bluetoothstatus">蓝牙状态</string>
    <string name="app_bluetoothunconnect">蓝牙未配对设备</string>
    <string name="app_bluetoothunlinked">蓝牙未配连接</string>
    <string name="app_bluetoothsearch">查找设备</string>
    <string name="app_bluetoothcancel">取消</string>
    <string name="app_notice">您确定要断开当前蓝牙连接吗？</string>
    <string name="main_tab_name_watermeter">水表</string>
    <string name="main_tab_name_hotmeter">热表</string>
    <string name="main_tab_name_data">读表</string>
    <string name="main_tab_name_modify">误差</string>
    <string name="main_tab_name_bluetooth">OK</string>
    <string name="main_tab_name_gprs">GPRS</string>
    <string name="main_tab_name_display">显示</string>
    <string name="main_tab_name_topworx">阀门</string>
    <string name="main_navigation_readdata">读表数据</string>
    <string name="readdata_meterid">请输入8位出厂编码</string>
    <string name="readdata_getmeterid">获取表号</string>
    <string name="readdata_check">标准单位</string>
    <string name="readmeter_t1">出厂编码</string>
    <string name="readmeter_t2">发生时间</string>
    <string name="readmeter_t3">值</string>
    <string name="main_navigation_amenderr">误差调整</string>
    <string name="amenderr_meterid">出厂编码</string>
    <string name="amenderr_meteridhint">请输入8位出厂编码</string>
    <string name="amenderr_readparameter">读流量系数</string>
    <string name="amenderr_name">流量点</string>
    <string name="amenderr_err">偏±0.00%</string>
    <string name="amenderr_qnold">原始系数</string>
    <string name="amenderr_qnnew">生成系数</string>
    <string name="amenderr_qn">修常用</string>
    <string name="amenderr_qn_1hint">误差</string>
    <string name="amenderr_qn_2hint">原系数</string>
    <string name="amenderr_qn_3hint">新系数</string>
    <string name="amenderr_qn2">修 0. 2</string>
    <string name="amenderr_qn2_1hint">误差</string>
    <string name="amenderr_qn2_2hint">原系数</string>
    <string name="amenderr_qn2_3hint">新系数</string>
    <string name="amenderr_qn1">修 0. 1 </string>
    <string name="amenderr_qn1_1hint">误差</string>
    <string name="amenderr_qn1_2hint">原系数</string>
    <string name="amenderr_qn1_3hint">新系数</string>
    <string name="amenderr_qmin">修最小</string>
    <string name="amenderr_qmin_1hint">误差</string>
    <string name="amenderr_qmin_2hint">原系数</string>
    <string name="amenderr_qmin_3hint">新系数</string>
    <string name="amenderr_setq">误差修正</string>
    <string name="amenderr_setAdjust">调整</string>
    <string name="amenderr_setCancle">取消</string>
    <string name="amenderr_setOk">确认</string>
    <string name="amenderr_notice">请联系迈拓售后，获取修改密码</string>
    <string name="amenderr_reset">恢复出厂值</string>
    <string name="amenderr_totalpoint">选择口径 </string>
    <string name="main_navigation_lcd">LCD显示</string>
    <string name="main_con">蓝牙未连接</string>
    <string name="main_connect">连接</string>
    <string name="lcd_meterid">显示表号</string>
    <string name="lcd_time">时钟</string>
    <string name="lcd_flowcoef">流量系数+分界点+温度补偿</string>
    <string name="lcd_flowrate">瞬时流量</string>
    <string name="lcd_total">A2累计流量</string>
    <string name="lcd_static">静态值</string>
    <string name="lcd_sleeptimeandvol">睡眠+电压</string>
    <string name="lcd_startandsize">始动+口径</string>
    <string name="lcd_slopeandamend">斜率+修正值</string>
    <string name="lcd_ver">版本号</string>
    <string name="lcd_t1">T1</string>
    <string name="lcd_t2">T2</string>
    <string name="lcd_A1">A1</string>
    <string name="lcd_A2">A2</string>
    <string name="lcd_A3">A3</string>
    <string name="setparameter_rechargesumheat">充热量</string>
    <string name="setparameter_rechargesumwater">充流量</string>
    <string name="setparameter_rechargesumheatunit">热量kW*h </string>
    <string name="setparameter_rechargesumwaterunit">流量10L</string>
    <string name="setparameter_initsumheathint">请输入初始热量</string>
    <string name="setparameter_initsumwaterhint">请输入初始流量</string>
    <string name="setparameter_clearheatcredit">清除热量</string>
    <string name="setparameter_clearwatercredit">清除流量</string>
    <string name="setparameter_initsumheat">初始热量</string>
    <string name="setparameter_initsumwater">初始流量</string>
    <string name="setparameter_setwaterpulse">设置脉冲参数</string>
    <string name="setparameter_clearrst">清除复位计数</string>
    <string name="setparameter_pulseparam">脉冲设置:</string>
    <string name="setparameter_loraparam">无线设置:</string>
    <string name="main_navigation_setparameter">参数设置</string>
    <string name="setparameter_readparameter">获取表号</string>
    <string name="setparameter_meterid">出厂编码</string>
    <string name="setparameter_meteridhint">请输入8位出厂编码</string>
    <string name="setparameter_setmeterid">替换为11</string>
    <string name="setparameter_openvalve">开阀</string>
    <string name="setparameter_closevalve">关阀</string>
    <string name="setparameter_amendmeterid">修改表号</string>
    <string name="setparameter_amendmeteridhint">请输入8位出厂编码</string>
    <string name="setparameter_insteadmeterid">替换至上</string>
    <string name="setparameter_clearmeter">热表清零</string>
    <string name="setparameter_initreport">初始报表</string>
    <string name="setparameter_clearbatter">清电池符</string>
    <string name="setparameter_adjusttime">校正时钟</string>
    <string name="setparameter_endtime">修改截止日期</string>
    <string name="setparameter_choosedate">日期</string>
    <string name="setparameter_choosetime">时间</string>
    <string name="setparameter_heatunit">kW*h/GJ</string>
    <string name="setparameter_unitkwh">kW*h</string>
    <string name="setparameter_unitgj">GJ</string>
    <string name="setparameter_totalunit">m³/GAL</string>
    <string name="setparameter_unitm">m³</string>
    <string name="setparameter_unitgal">GAL</string>
    <string name="setparameter_amendx">修正系数</string>
    <string name="setparameter_amendxhint">请输入修正系数</string>
    <string name="setparameter_slope">斜率修正</string>
    <string name="setparameter_slopehint">请输入斜率修正</string>
    <string name="setparameter_startf">启动流量</string>
    <string name="setparameter_startfhint">请输入启动流量</string>
    <string name="setparameter_div1">分界点1</string>
    <string name="setparameter_div1hint">分界点1</string>
    <string name="setparameter_div2">分界点2</string>
    <string name="setparameter_div2hint">分界点2</string>
    <string name="setparameter_div3">分界点3</string>
    <string name="setparameter_div3hint">分界点3</string>
    <string name="setparameter_pointwhere">单位:</string>
    <string name="setparameter_metersize">口径:</string>
    <string name="setparameter_sleeptime">睡眠时间</string>
    <string name="setparameter_sleeptimehint">请输入睡眠时间</string>
    <string name="setparameter_programme">程序切换</string>
    <string name="setparameter_port">切换通道</string>
    <string name="setparameter_2">双</string>
    <string name="setparameter_4">四</string>
    <string name="setparameter_6">六</string>
    <string name="setparameter_8">八</string>
    <string name="setparameter_qn">常用流量系数</string>
    <string name="setparameter_qnhint">请输入常用流量系数</string>
    <string name="setparameter_qn2">0. 2 常用流量</string>
    <string name="setparameter_qn2hint">请输入0.2  常用流量</string>
    <string name="setparameter_qn1">0. 1 常用流量</string>
    <string name="setparameter_qn1hint">请输入0.1  常用流量</string>
    <string name="setparameter_qmin">最小流量系数</string>
    <string name="setparameter_qminhint">请输入最小流量系数</string>
    <string name="setparameter_setq">流量修正</string>
    <string name="setparameter_settcoef">温度补偿</string>
    <string name="setparameter_t1coefhint">T1补偿</string>
    <string name="setparameter_t2coefhint">T2补偿</string>
    <string name="setparameter_t1">T1温度系数</string>
    <string name="setparameter_t1hint">请输入T1温度系数</string>
    <string name="setparameter_t2">T2温度系数</string>
    <string name="setparameter_t2hint">请输入T2温度系数</string>
    <string name="setparameter_t3">T3温度系数</string>
    <string name="setparameter_t3hint">请输入T3温度系数</string>
    <string name="setparameter_t4">T4温度系数</string>
    <string name="setparameter_t4hint">请输入T4温度系数</string>
    <string name="setparameter_t5">T5温度系数</string>
    <string name="setparameter_t5hint">请输入T5温度系数</string>
    <string name="setparameter_settparameter">设温度系数</string>
    <string name="setparameter_resetparameter">恢复参数</string>
    <string name="setparameter_closedate">截止日期</string>
    <string name="setparameter_closedatehint">请输入截止日期</string>
    <string name="setparameter_chooseclosedate">选中日期</string>
    <string name="setparameter_setchecktime">设自检时间</string>
    <string name="setparameter_setchecktimehint">请输入自检时间</string>
    <string name="setparameter_permission">设置权限</string>
    <string name="setparameter_permissionhint">请输入权限</string>
    <string name="setparameter_setmode">输出方式</string>
    <string name="setparameter_amendalarm">修报警余量</string>
    <string name="setparameter_amendalarmhint">请输入报警余量</string>
    <string name="setparameter_creditdsumheat">充热/流量</string>
    <string name="setparameter_creditdsumheatunit">热量kW*h 流量10L</string>
    <string name="setparameter_creditdsumheathint">请输入热/流量值</string>
    <string name="setparameter_clearcredit">清除热/流量</string>
    <string name="setparameter_initdsumheat">初始热/流量</string>
    <string name="setparameter_initdsumheathint">请输入初始热/流量</string>
    <string name="setparameter_sendlabel">发送:</string>
    <string name="setparameter_sendtx">请输入发送信息</string>
    <string name="setparameter_cs16">+CS+16</string>
    <string name="setparameter_send">发送</string>
    <string name="setparameter_rxhint">-----等待接收信息-----</string>
    <string name="main_navigation_readparameter">灌新程序</string>
    <string name="readparameter_readparameter">读内部参数</string>
    <string name="readparameter_readdata">读内部数据</string>
    <string name="readparameter_reprogramme">烧制程序</string>
    <string name="readparameter_meterid">出厂编码 </string>
    <string name="readparameter_meteridhint">请输入8位出厂编码</string>
    <string name="readparameter_setmeterid">修改表号</string>
    <string name="readparameter_qn">常用系数 </string>
    <string name="readparameter_qnhint">请输入常用系数</string>
    <string name="readparameter_setq">流量修正</string>
    <string name="readparameter_qn2">0.2 常    用 </string>
    <string name="readparameter_qn2hint">请输入0.2常用系数</string>
    <string name="readparameter_qn1">0.1 常    用 </string>
    <string name="readparameter_qn1hint">请输入0.1常用系数</string>
    <string name="readparameter_qmin">最小系数 </string>
    <string name="readparameter_qminhint">请输入最小系数</string>
    <string name="readparameter_t1coef">T1温补偿</string>
    <string name="readparameter_t1coefhint">请输入T1补偿</string>
    <string name="readparameter_settcoef">温度补偿</string>
    <string name="readparameter_t2coef">T2温补偿</string>
    <string name="readparameter_t2coefhint">请输入T2补偿</string>
    <string name="readparameter_t1">温度系01</string>
    <string name="readparameter_t1hint">请输入温度系数1</string>
    <string name="readparameter_sett">设温系数</string>
    <string name="readparameter_t2">温度系02</string>
    <string name="readparameter_t2hint">请输入温度系数2</string>
    <string name="readparameter_t3">温度系03</string>
    <string name="readparameter_t3hint">请输入温度系数3</string>
    <string name="readparameter_t4">温度系04</string>
    <string name="readparameter_t4hint">请输入温度系数4</string>
    <string name="readparameter_t5">温度系05</string>
    <string name="readparameter_t5hint">请输入温度系数5</string>
    <string name="readparameter_checktime">自检时间 </string>
    <string name="readparameter_checktimehint">请输入自检时间</string>
    <string name="readparameter_setchecktime">自检时间</string>
    <string name="readparameter_amendx">修正系数 </string>
    <string name="readparameter_amendxhint">请输入修正系数</string>
    <string name="readparameter_setamendx">修正系数</string>
    <string name="readparameter_heatunit">kW*h/GJ </string>
    <string name="readparameter_heatunithint">请输入显示单位</string>
    <string name="readparameter_setheatunit">kW*h/GJ</string>
    <string name="readparameter_slope">斜率修正 </string>
    <string name="topworx_setlorach">修改频道:</string>
</resources>